[workspace]
members = ["pinions-macros", "examples/counter"]
resolver = "2"

[profile.release]
lto = "fat"
opt-level = 2
panic = "abort"
strip = true

[profile.dev]
lto = false

[package]
name = "pinions"
authors = ["Pinponik <256419204+Pinponik@users.noreply.github.com>"]
version = "0.0.0"
edition = "2021"
description = "A fast and easy-to-use GUI library running on microcontrolleres"
repository = "https://github.com/Pinponik/Pinions"
rust-version = "1.71"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui", "ui", "graphics", "interface", "widgets"]
license = "MIT OR Apache-2.0"

[dependencies]
heapless = { version = "0.9.3", optional = true }
winit = "0.30.13"
pinions-macros = { path = "pinions-macros" }
num = "0.1.43"

[features]
default = []
no_std = ["dep:heapless"]
debug = []
