[package]
name = "pincers"
authors = ["Pinponik"]
version = "0.0.0"
edition = "2021"
description = "A fast and easy-to-use GUI library"
repository = "https://github.com/Pinponik/Pincers"
rust-version = "1.71"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui", "ui", "graphics", "interface", "widgets"]
license = "MIT OR Apache-2.0"

[dependencies]
heapless = { version = "0.9.3", optional = true }
winit = "0.30.13"
pincers-macros = { path = "pincers-macros" }

[features]
default = []
no_std = ["dep:heapless"]
